# crashtrack

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  package-lock.json  package.json
.github/workflows/: ci.yml  demo-release.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/api/src/: index.ts  types.ts
apps/api/src/lib/: crypto.ts  grouping.ts  middleware.ts  minidump.ts  session.ts  symbolicate.ts  webhooks.ts
apps/api/src/routes/: auth.ts  dashboard.ts  ingest.ts  keys.ts  me.ts  orgs.ts  pe_files.ts  projects.ts  public.ts  symbols.ts
apps/api/test/: grouping.test.ts  minidump.test.ts
apps/web/: .env.production  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
apps/web/src/: App.tsx
apps/web/src/components/: AppHeader.tsx  CrashesChart.tsx  ErrorBoundary.tsx  skeletons.tsx
apps/web/src/components/ui/: button.tsx  input.tsx  (+1 more)
apps/web/src/lib/: api.ts  format.ts  title.ts
apps/web/src/pages/: AppHome.tsx  Docs.tsx  ErrorPage.tsx  GroupDetail.tsx  Landing.tsx  NewOrg.tsx  NewProject.tsx  OrgSettings.tsx  ProjectHome.tsx  ProjectReleases.tsx  ProjectSettings.tsx  ProjectSetup.tsx  PublicDashboard.tsx
docs/: launch-posts.md  seh-unwinding-in-wasm.md
docs/screenshots/: README.md
examples/demo-crasher/: Cargo.toml  README.md
examples/demo-crasher/src/: main.rs
migrations/: 0001_init.sql  0002_projects_crashes.sql  0003_orgs.sql  0004_crash_stack.sql  0005_symbol_cache.sql  0006_exception_details.sql  0007_source_context.sql  0008_exe_files.sql  0009_symbol_cache_line_info.sql
